--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,11 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.2",
     "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "prisma": {
+  "seed": "ts-node src/prisma/seed.ts"
   }
 }
